--- a/react-tdd/src/App.scss
+++ b/react-tdd/src/App.scss
@@ -1,64 +1,15 @@
 @import 'styles/colors.scss';
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-h1 {
-  color: $light-shades;
+* {
+  margin: 0;
+  padding: 0;
   font-family: $main-font;
-  font-weight: 300;
 }
 
-.App-menu-icon {
-  color: $light-accents;
-  font-size: 36px;
-  background: -webkit-linear-gradient($light-accents, $light-shades);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  padding: 15px
+html {
+  background: $light-shades;
 }
 
-.App-menu-outline {
-  border: solid 2px $dark-shades;
-  border-radius: 8px;
-  display: inline-block;
-  margin: 50px;
-  filter: drop-shadow(0 0 20px $dark-shades);
-  background-color: $dark-shades;
-}
-
-.App-header {
-  background-color: $dark-shades;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: $light-shades;
-}
-
-.App-link {
-  color: $main-brand-color;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
 }
