--- a/react-tdd/src/App.scss
+++ b/react-tdd/src/App.scss
@@ -13,3 +13,38 @@ html {
 a {
   text-decoration: none;
 }
+
+#columns {
+	column-width: 320px;
+	column-gap: 15px;
+  width: 90%;
+	max-width: 1100px;
+	margin: 50px auto;
+}
+
+div#columns .flexChild {
+	margin: 0 2px 15px;
+	padding: 15px;
+	padding-bottom: 10px;
+  display: inline-block;
+  column-break-inside: avoid;
+}
+
+div#columns .flexChild img {
+	width: 100%;
+  height: auto;
+  max-width: 750px;
+	margin-bottom: 5px;
+  box-shadow: $dark-shadow;
+}
+
+div#columns figure figcaption {
+  font-size: .9rem;
+	color: #444;
+  line-height: 1.5;
+}
+
+@media screen and (max-width: 750px) {
+  #columns { column-gap: 0px; }
+  #columns figure { width: 100%; }
+}
