--- a/react-tdd/src/NavLink.scss
+++ b/react-tdd/src/NavLink.scss
@@ -12,15 +12,16 @@
   padding: 20px;
   background-color: $main-brand-color;
   color: $light-shades;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 18px;
   margin: 10px;
   border-radius: 3px;
-  box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  // box-shadow: $dark-shadow;
 }
 
 .NavLink a:hover {
   transition-duration: $standard-transition-duration;
-  background-color: $dark-accents;
-  color: $main-brand-color;
+  background-color: $light-shades-trans;
+  color: $light-shades;
+  // box-shadow: $light-shadow;
 }
