--- a/react-tdd/src/Header.scss
+++ b/react-tdd/src/Header.scss
@@ -1,48 +1,72 @@
 @import 'styles/colors.scss';
 
-.Nav {
+nav {
+  position: fixed;
+  top: 0px;
+}
+
+.section {
+  width: 100%;
   background-color: $main-brand-color;
 }
 
-.Nav ul {
-  // position: absolute;
-  line-height: 24px;
-}
-
-.NavRight {
-  text-align: right;
-}
-
 .container {
-  column-width: 420px;
-  width: 90%;
-	max-width: 1400px;
-	margin: 0px 50px auto;
+  padding: 20px;
 }
 
-.Nav i {
-  top: 5px;
-  position: relative;
+.content {
+  max-width: 1100px;
+  width: 100%;
+  margin: auto;
+  column-count: 2;
+}
+
+.Nav {
+
+  a {
+    color: $light-shades;
+    font-weight: 500;
+  }
+
+  a:hover {
+    color: $dark-shades;
+  }
 }
 
 .NavMenu {
   display: none;
+
+  i {
+    position: relative;
+    top: 6px;
+  }
 }
 
-.material-icons-round {
-  line-height: 24px;
-}
+@media screen and (max-width: 750px) {
+  .NavMenu {
+    display: inline;
+  }
 
-@media screen and (max-width: 1100px) {
   .NavLeft {
     display: none;
   }
 
-  .container {
-    column-width: auto;
+  .content {
+    column-count: 1;
   }
+}
 
-  .NavMenu {
-    display: inline-block;
+.NavRight {
+  text-align: right;
+
+  li {
+    padding-left: 40px;
+  }
+}
+
+.NavLeft {
+
+  li {
+    padding-right: 40px;
   }
 }
