--- a/react-tdd/src/App.scss
+++ b/react-tdd/src/App.scss
@@ -24,6 +24,16 @@ ul {
   padding: 0px;
 }
 
+.headerSpacer {
+  height: 59px;
+}
+
+@media screen and (max-width: 750px) {
+  .headerSpacer {
+    height: 70px;
+  }
+}
+
 
 //
 // #columns {
