--- a/react-tdd/src/Header.scss
+++ b/react-tdd/src/Header.scss
@@ -5,16 +5,16 @@ nav {
   top: 0px;
 }
 
-.section {
+.Nav.section {
   width: 100%;
   background-color: $main-brand-color;
 }
 
-.container {
+.Nav .container {
   padding: 20px;
 }
 
-.content {
+.Nav .content {
   max-width: 1100px;
   width: 100%;
   margin: auto;
@@ -51,7 +51,7 @@ nav {
     display: none;
   }
 
-  .content {
+  .Nav .content {
     column-count: 1;
   }
 }
