--- a/react-tdd/src/styles/colors.scss
+++ b/react-tdd/src/styles/colors.scss
@@ -1,11 +1,18 @@
-$light-shades: #F2F2F3;
-$light-accents: #8D9477;
+// $light-shades: #F2F2F3;
+// $light-accents: #8D9477;
+// $light-shades-trans: rgba(242, 242, 243, .2);
+// $main-brand-color: #2DE0B3;
+// $main-brand-color-dark: #159172;
+// $dark-accents: #6D645C;
+// $dark-shades: #2B2B3C;
+$light-shades: #F3F7F7;
+$light-accents: #E79FA0;
 $light-shades-trans: rgba(242, 242, 243, .2);
-$main-brand-color: #2DE0B3;
+$main-brand-color: #C95658;
 $main-brand-color-dark: #159172;
-$dark-accents: #6D645C;
-$dark-shades: #2B2B3C;
-$dark-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+$dark-accents: #8C8FA7;
+$dark-shades: #2E2940;
+$dark-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 $light-shadow: 0 10px 20px -12px rgba(109, 100, 92, 0.8), 0 3px 20px 0px rgba(109, 100, 92, 0.5), 0 8px 10px -5px rgba(109, 100, 92, 0.5);
 $main-font: 'Roboto', sans-serif;
 $standard-transition-duration: .8s;
