--- a/react-tdd/src/ContentContainer.scss
+++ b/react-tdd/src/ContentContainer.scss
@@ -2,7 +2,7 @@
 
 .ContentContainer.section {
   width: 100%;
-  background-color: $light-shades;
+  background-color: $dark-shades;
 
   .container {
     padding: 20px;
