added base content and project pages with routes

--- a/react-tdd/src/ProjectCard.scss
+++ b/react-tdd/src/ProjectCard.scss
@@ -2,6 +2,7 @@
 
 .ProjectCard {
   margin-bottom: 60px;
+  margin-left: 20px;
   break-inside: avoid;
   page-break-inside: avoid;
   // background-color: $light-shades;
