--- a/react-tdd/src/ProjectCard.scss
+++ b/react-tdd/src/ProjectCard.scss
@@ -26,7 +26,8 @@
     color: $main-brand-color;
     font-weight: 900;
     font-size: 16px;
-    padding-top: 0px;
+    padding-top: 10px;
+    padding-bottom: 5px;
   }
 
   p {
@@ -35,8 +36,18 @@
     padding-top: 10px;
   }
 
+  .linkText {
+    color: $light-accents;
+    font-weight: 500;
+    padding-top: 20px;
+  }
+
+  .linkText:hover {
+    color: $main-brand-color;
+  }
+
   .description {
     padding: 15px;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
   }
 }
