--- a/react-tdd/src/ProjectModule.scss
+++ b/react-tdd/src/ProjectModule.scss
@@ -6,9 +6,14 @@
 
   h1 {
     color: $light-shades;
-    font-weight: 300;
-    font-size: 24px;
-    padding-bottom: 10px;
+    font-weight: 100;
+    font-size: 42px;
+    padding-bottom: 20px;
+
+    @media screen and (max-width: 750px) {
+      font-size: 24px;
+      font-weight: 300;
+    }
   }
 
   h3 {
@@ -40,6 +45,7 @@
     .card {
       border-radius: 5px;
       margin-bottom: 30px;
+      // display: inline-flex;
     }
 
     .cardImage {
