adjusted colors for accessability

--- a/react-tdd/src/styles/colors.scss
+++ b/react-tdd/src/styles/colors.scss
@@ -15,8 +15,8 @@
 $dark-shades: #EDEFED;
 $dark-accents: #6E8E96;
 $light-shades-trans: rgba(242, 242, 243, .2);
-$main-brand-color: #09BDED;
-$main-brand-color-dark: #09BDED;
+$main-brand-color: #0074a4;
+$main-brand-color-dark: #0074a4;
 $light-accents: #63666E;
 $light-shades: #192034;
 $dark-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
